<resources>
    <string name="app_name">AppLaunch</string>
    <string name="background">Background</string>
    <string name="trees">Trees</string>
    <string name="animal">Animal</string>
    <string name="flower">Flower</string>
    <string name="other">Other</string>
    <string name="categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_api_for_category_filter_not_working_so_made_dummy_categories_with_similar_data">The api for category filter not working! so made dummy categories with similar data</string>
</resources>