<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple_background"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/the_api_for_category_filter_not_working_so_made_dummy_categories_with_similar_data"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_TextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favouriteConstraint"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_background_white"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/category_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/category_TextView">

        <TextView
            android:id="@+id/favoriteList_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/heart_fill_icon"
            android:drawablePadding="5dp"
            android:text="Favourites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/category_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/treesConstraint"
            style="@style/constraintStyle"
            android:background="@drawable/rounded_corner_background_white"
            app:layout_constraintEnd_toStartOf="@+id/animalConstraint"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/header_TextViewStyle"
                android:text="@string/trees"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/animalConstraint"
            style="@style/constraintStyle"
            android:background="@drawable/rounded_corner_background_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/treesConstraint"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/header_TextViewStyle"
                android:text="@string/animal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/flowerConstraint"
            style="@style/constraintStyle"
            android:background="@drawable/rounded_corner_background_white"
            app:layout_constraintEnd_toStartOf="@+id/natureConstraint"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/treesConstraint">

            <TextView
                style="@style/header_TextViewStyle"
                android:text="@string/flower"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/natureConstraint"
            style="@style/constraintStyle"
            android:background="@drawable/rounded_corner_background_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/flowerConstraint"
            app:layout_constraintTop_toBottomOf="@+id/treesConstraint">

            <TextView
                style="@style/header_TextViewStyle"
                android:text="Nature"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/otherConstraint"
            style="@style/constraintStyle"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_corner_background_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/flowerConstraint"
            app:layout_constraintTop_toBottomOf="@+id/flowerConstraint">

            <TextView
                style="@style/header_TextViewStyle"
                android:text="@string/other"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>